src/objects/zqu__BillingEntity__c.object
<CustomObject>
    <fields>
        <fullName>zqu__Address1__c</fullName>
        <label>Address1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Address2__c</fullName>
        <label>Address2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Country__c</fullName>
        <label>Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Depth__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The depth of current entity ID</description>
        <label>Depth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__EntityID__c</fullName>
        <label>Entity ID</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__EntityName__c</fullName>
        <inlineHelpText>Name of the Zuora entity.</inlineHelpText>
        <label>Full Entity Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__GlobalEntityID__c</fullName>
        <description>The global entity Zuora ID</description>
        <label>Global Entity ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ParentEntityID__c</fullName>
        <description>The parent entity Zuora ID</description>
        <label>Parent Entity ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__PostalCode__c</fullName>
        <label>Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__State__c</fullName>
        <label>State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ZuoraId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The Zuora Id (external primary key) of this Entity.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Zuora Id (external primary key) of this Entity.</inlineHelpText>
        <label>Zuora Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Billing Entity</label>
    <listViews>
        <fullName>zqu__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Entity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Entities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>